# multipy

./: .buildinfo  .buildinfo.bak  .gitignore  CITATION.cff  README.md  ROADMAP.md  changelog.html  contact.html  genindex.html  guide.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  start.html
.doctrees/: changelog.doctree  contact.doctree  environment.pickle  guide.doctree  index.doctree  intro.doctree  reference.doctree  start.doctree
.doctrees/api/: modules.doctree  multipy.core.analysis.doctree  multipy.core.doctree  multipy.core.templates.doctree  multipy.datasets.doctree  multipy.doctree  multipy.io.doctree  multipy.tests.doctree
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/multipy/core/: algorithm.html  map.html  matrix.html  template.html  truth.html
_modules/multipy/core/templates/: adder.html  csa.html  decoder.html
_modules/multipy/io/: lazy_json.html
_modules/multipy/tests/: test_population.html  test_templates.html  test_to_json.html  test_truth.html
_sources/: changelog.rst.txt  guide.rst.txt  reference.rst.txt
_sources/api/: modules.rst.txt  multipy.datasets.rst.txt
api/: modules.html  multipy.core.analysis.html  multipy.core.html  multipy.core.templates.html  multipy.datasets.html  multipy.html  multipy.io.html  multipy.tests.html
docs/: README.md  saturation.md  structure.md  truthtable.md
docs/algorithms/: multipy-notes.txt  saturation.md
docs/overview/algorithms/: matrix.md
docs/overview/structures/: .ascii_diagrams.txt  templates.md
docs/reference/: Makefile  apidoc.sh  build.sh  localhost.sh
docs/reference/src/: changelog.rst  conf.py  contact.rst  guide.rst  index.rst  intro.rst  reference.rst  starting.rst
docs/reference/src/api/: multipy.analysis.rst  multipy.core.analysis.rst  multipy.core.rst  multipy.core.templates.rst  multipy.io.rst  multipy.rst
docs/structures/: .ascii_diagrams.txt  README.md  algorithm.md  templates.md  truthtable.md
multipy/: __init__.py  pyproject.toml
multipy/core/: algorithm.py  map.py  matrix.py  template.py  truth.py
multipy/core/templates/: adder.py  csa.py  decoder.py  map.py
multipy/core/tests/: test_populate.py  test_population.py  test_templates.py  test_truth.py
multipy/core/utils/: pretty.py
multipy/io/: pqLoad.py  qpStore.py
multipy/testing/: lib_import_test.py
multipy/tests/: test_maps.py  test_population.py  test_templates.py  test_to_json.py  test_truth.py
