[project]
name = "multipy"
version = "0.1.1"
description = "A powerful tool to build, test, and analyse multiplier designs."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE.md"]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/EphraimCompEng/multipy"
Issues = "https://github.com/EphraimCompEng/multipy/issues"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "multipy"
module-root = ""

[dependency-groups]
dev = [
    "pytest==9.0.2",
     "sphinx-rtd-theme==3.1.0rc1",
     "sphinx<=9.1.0",
     "docutils==0.21.2",
     "furo==2025.12.19",
     "toml-rs==0.2.2",
]
