[project]
name = "multipy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EphraimCompEng", email = "madugba.finance@proton.me" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
multipy = "multipy:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
